# billsnap

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  pyproject.toml  railway.toml  start.sh
alembic/: env.py
alembic/versions/: a1b2c3d4e5f6_initial_schema.py  b2c3d4e5f6a7_add_waitlist.py
app/: config.py  database.py  dependencies.py  main.py
app/models/: __init__.py  audit_log.py  base.py  bill.py  line_item.py  ocr_job.py  user.py  waitlist.py
app/routers/: bills.py  dashboard.py  jobs.py  waitlist.py
app/schemas/: bill.py  ocr_job.py
app/services/: bill_service.py  classifier.py  export_service.py  ocr_service.py  storage_service.py
app/workers/: ocr_worker.py
docs/: architecture.md  brand.md  ocr-optimization-plan.md  onboarding-flow.md  product-brief.md
evals/ocr_benchmark/: .env.example  benchmark.py  requirements.txt  score_baseline.py
landing/: package-lock.json  package.json  tailwind.config.ts
landing/app/: globals.css  layout.tsx  opengraph-image.tsx  page.tsx
landing/components/: Nav.tsx  WaitlistForm.tsx
scripts/: seed.py
tests/: conftest.py
tests/test_api/: test_bills.py  test_dashboard.py
tests/test_services/: test_bill_service.py  test_export_service.py  test_ocr_service.py
tests/test_workers/: test_ocr_worker.py
web-app/: .gitignore  next.config.ts  package-lock.json  package.json  playwright.config.ts
web-app/app/: globals.css  layout.tsx
web-app/app/bills/: page.tsx
web-app/app/upload/: page.tsx
web-app/components/bills/: BillCard.tsx  MonthSwitcher.tsx
web-app/lib/: api.ts  currency.ts
(+16 files in other folders)
