[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "billsnap"
version = "0.1.0"
description = "Bill & receipt digitization for Indian small businesses"
requires-python = ">=3.12"

dependencies = [
    # Web framework
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "python-multipart>=0.0.9",

    # Database
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",

    # Config
    "pydantic-settings>=2.3.0",

    # OCR
    "anthropic>=0.40.0",
    "Pillow>=10.0.0",

    # Storage (S3-compatible)
    "boto3>=1.35.0",

    # Export
    "openpyxl>=3.1.0",

    # Utilities
    "python-dotenv>=1.0.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.0",
    "ruff>=0.4.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["app"]
